--- a/app/templates/user_landing_page.html
+++ b/app/templates/user_landing_page.html
@@ -13,14 +13,14 @@
               {{ user.name }} <br>
             </p>
             <p>
+              <h4> Email </h4>
+              {{ user.email }} <br>
+            </p>
+            <p>
               <h4> Phone </h4>
               {{ user.phone }} <br>
             </p>
-            <p>
-              <h4> Address </h4>
-              {{ user.address }} <br>
-            </p>
-        <p><a class="btn btn-primary btn-md btn-block" href="{{ url_for('edit_delivery_preferences', username=current_user.username) }}" role="button">Edit Preferences</a></p>
+        <p><a class="btn btn-primary btn-md btn-block" href="{{ url_for('edit_user_info', username=current_user.username) }}" role="button">Edit User Info</a></p>
         <p><a href='{{ url_for('edit_login', username=current_user.username) }}' style='font-size: 20px'>Change password</a></p>
         </div>
 
