--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -5,7 +5,7 @@
     <div class='row' style='margin-bottom:30px'><h2> {{ user.username }}'s Profile </h2></div>
     <div class='flex-container'>
       <div class='row'>
-        <div class='col-md-6'>
+        <div class='col-lg-12'>
 
           <h3> Preferences </h3>
             <p>
@@ -23,23 +23,6 @@
         <p><a class="btn btn-primary btn-md btn-block" href="{{ url_for('edit_user_info', username=current_user.username) }}" role="button">Edit User Info</a></p>
         <p><a href='{{ url_for('edit_login', username=current_user.username) }}' style='font-size: 20px'>Change password</a></p>
         </div>
-
-        <div class='col-md-6'>
-          <div style='margin-bottom:55px'>
-            <h3> Upcoming Deliveries </h3>
-            <br>
-            {{ user.get_transactions(completed=False) | safe }}
-          </div>
-
-          <div style='margin-bottom:40px'>
-            <h3> Completed Deliveries </h3>
-            <br>
-            {{ user.get_transactions(completed=True) | safe }}
-          </div>
-
-          <a class="btn btn-primary btn-md btn-block" href="{{ url_for('delivery_signup') }}" role="button" style='font-size:20px'>Delivery Signup</a>
-
-        </div>
       </div>
     </div>
 
@@ -47,7 +30,7 @@
     <div class='row' style='margin-bottom:30px'><h2> {{ user.username }}'s Profile </h2></div>
     <div class='flex-container'>
       <div class='row'>
-        <div class='col-md-6'>
+        <div class='col-lg-12'>
 
           <div>
             <h3> Preferences </h3>
@@ -108,23 +91,6 @@
 
       </div>
 
-        <div class='col-md-6'>
-
-          <div style='margin-bottom:55px'>
-            <h3> Upcoming Deliveries </h3>
-            <br>
-            {{ user.get_transactions(completed=False) | safe }}
-          </div>
-
-          <div style='margin-bottom:40px'>
-            <h3> Completed Deliveries </h3>
-            <br>
-            {{ user.get_transactions(completed=True) | safe }}
-          </div>
-
-          <a class="btn btn-primary btn-lg btn-block" href="{{ url_for('book') }}" role="button">Book Delivery</a>
-
-        </div>
       </div>
     </div>
   {% endif %}
