--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -20,8 +20,8 @@
               <h4> Phone </h4>
               {{ user.phone }} <br>
             </p>
-        <p><a class="btn btn-primary btn-md btn-block" href="{{ url_for('edit_user_info', username=current_user.username) }}" role="button">Edit User Info</a></p>
-        <p><a href='{{ url_for('edit_login', username=current_user.username) }}' style='font-size: 20px'>Change password</a></p>
+        <p><a class="btn btn-primary btn-md" href="{{ url_for('edit_user_info', username=current_user.username) }}" role="button">Edit User Info</a></p>
+        <p><a href='{{ url_for('edit_login', username=current_user.username) }}' style='font-size: 15px'>Change password</a></p>
         </div>
       </div>
     </div>
@@ -47,7 +47,7 @@
                 {{ user.address }} <br>
               </p>
 
-              <p><a class="btn btn-primary btn-md btn-block" href="{{ url_for('edit_user_info', username=current_user.username) }}" role="button">Edit User Info</a></p>
+              <p><a class="btn btn-primary btn-lg" href="{{ url_for('edit_user_info', username=current_user.username) }}" role="button" style='font-size: 20px'>Edit User Info</a></p>
           </div>
 
           <div>
@@ -85,8 +85,8 @@
                     </ul>
                 </div>
               </p>
-          <p><a class="btn btn-primary btn-md btn-block" href="{{ url_for('edit_delivery_preferences', username=current_user.username) }}" role="button">Edit Delivery Preferences</a></p>
-          <p><a href='{{ url_for('edit_login', username=current_user.username) }}' style='font-size: 20px'>Change password</a></p>
+          <p><a class="btn btn-primary btn-lg" href="{{ url_for('edit_delivery_preferences', username=current_user.username) }}" role="button" style='font-size: 20px'>Edit Delivery Preferences</a></p>
+          <p><a href='{{ url_for('edit_login', username=current_user.username) }}' style='font-size: 15px'>Change password</a></p>
         </div>
 
       </div>
