--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -2,7 +2,15 @@
 
 {% block app_content %}
   {% if usertype == 'volunteer' %}
-    <div class='row' style='margin-bottom:30px'><h2> {{ user.username }}'s Profile </h2></div>
+    <div class='row' style='margin-bottom:30px'>
+      <table>
+        <tr valign="middle">
+            <td><img src="{{ user.avatar(64) }}"></td>
+            <td><h2> {{ user.username }}'s Profile </h2></td>
+        </tr>
+      </table>
+    </div>
+
     <div class='flex-container'>
       <div class='row'>
         <div class='col-lg-12'>
@@ -27,7 +35,15 @@
     </div>
 
   {% elif usertype == 'recipient' %}
-    <div class='row' style='margin-bottom:30px'><h2> {{ user.username }}'s Profile </h2></div>
+    <div class='row' style='margin-bottom:30px'>
+      <table>
+        <tr valign="middle">
+            <td><img src="{{ user.avatar(64) }}"></td>
+            <td><h2> {{ user.username }}'s Profile </h2></td>
+        </tr>
+      </table>
+    </div>
+
     <div class='flex-container'>
       <div class='row'>
         <div class='col-lg-12'>
@@ -37,6 +53,10 @@
               <p>
                 <h4> Name </h4>
                 {{ user.name }} <br>
+              </p>
+              <p>
+                <h4> Email </h4>
+                {{ user.email }} <br>
               </p>
               <p>
                 <h4> Phone </h4>
