Made emailing asynchronous, delivery pickup confirmation email

--- a/app/templates/email/booking_confirmation.html
+++ b/app/templates/email/booking_confirmation.html
@@ -9,7 +9,7 @@ Your order is set for <b>{{ date }}</b>.
 
 <a href="{{ url_for('user', username=user.username) }}" style='font-size:15px'>{{ user.name }}'s Profile</a>
 
-<p>You can alter your order until <b>this Thursday evening at 8PM.</b></p>
+<p>You can alter your delivery until <b>this Thursday evening at 8PM.</b></p>
 
 <p>Thank you,</p>
 <p>Hanover Helpers</p>
