Removed ordering of DataTable for time being

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -85,7 +85,8 @@ crossorigin="anonymous"></script>
 
 <script>
 $(document).ready( function () {
-  $('table.display').DataTable();
+  $('table.display').DataTable({
+  "ordering": false});
 } );
 </script>
 {% endblock %}
