--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,6 +16,12 @@ Hanover Helpers
       <div class="df-logo" style="color:green; margin-right: 0px">Hanover<span style='color:darkgreen'>Helpers</span></a></div>
     </div>
     <div id="navbarMenu" class="navbar-menu-wrapper" style="padding:0px" align='left'>
+
+      <div class="navbar-menu-header">
+        <a href="{{ url_for('user', username=current_user.username) }}" class="df-logo">dash<span>forge</span></a>
+        <a id="mainMenuClose" href=""><i data-feather="x"></i></a>
+      </div>
+
       <ul class="nav navbar-menu">
         {% if current_user.is_anonymous %}
         <a href="{{ url_for('login') }}" style="color:black;font-size:20px">Login</a>
