--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -86,6 +86,7 @@ crossorigin="anonymous"></script>
 
 <script src="{{ url_for('static', filename='/lib/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
 <script src="{{ url_for('static', filename='/lib/feather-icons/feather.min.js') }}"></script>
+<script src="{{ url_for('static', filename='/lib/perfect-scrollbar/perfect-scrollbar.min.js') }}"></script>
 <script src="{{ url_for('static', filename='/assets/js/dashforge.js') }}"></script>
 
 
