Edit routing for email fixed

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,7 +18,7 @@ Hanover Helpers
     <div id="navbarMenu" class="navbar-menu-wrapper" style="padding:0px" align='left'>
 
       <div class="navbar-menu-header">
-        <a href="{{ url_for('user', username=current_user.username) }}" class="df-logo">dash<span>forge</span></a>
+        <a href="{{ url_for('user', username=current_user.username) }}" class="df-logo" style="color:green">Hanover<span style='color:darkgreen'>Helpers</span></a>
         <a id="mainMenuClose" href=""><i data-feather="x"></i></a>
       </div>
 
