--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,7 @@
 
 {% block head %}
 {{ super() }}
- <link rel="shortcut icon" href="{{ url_for('static', filename='natalie.jpg' )}}" type="image/gif"/>
+ <link rel="shortcut icon" href="{{ url_for('static', filename='h.png' )}}" type="image/png"/>
 {% endblock %}
 
 {% block title %}
