--- a/app/templates/login_form.html
+++ b/app/templates/login_form.html
@@ -2,7 +2,7 @@
 
 {% block optional %}
 
-<p>New User? <a href='{{ url_for('select_user_type') }}'>Register Here</a></p>
+<p style='font-size:20px'>New User? <a href='{{ url_for('select_user_type') }}'>Register Here</a></p>
 <p>Forgot Password? <a href='{{ url_for('reset_password_email') }}'>Reset Password</a></p>
 
 {% endblock %}
