--- a/app/templates/email/volunteer_reminder.html
+++ b/app/templates/email/volunteer_reminder.html
@@ -17,10 +17,14 @@
 <p><h4>Payment Notes:</h4></p>
 
 <p>
-{% for elem in recipient.print_payment_notes() %}
-  <li>{{ elem }}</li>
-{% endfor %}
-</p>
+{% if transaction.recipient.print_list() %}
+  {% for elem in transaction.recipient.print_payment_notes() %}
+    <li>{{ elem }}</li>
+  {% endfor %}
+  </p>
+{% else %}
+<p> No payment notes </p>
+{% endif %}
 
 <p><h4>Other Notes:</h4></p>
 
@@ -36,6 +40,8 @@
   <li>{{ elem }}</li>
 {% endfor %}
 </p>
+
+
 
 <p>Please call Natalie at 401-575-3142 if you have any questions or run into any issues.</p>
 
