--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -66,7 +66,7 @@ Hanover Helpers
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">
 
 <!-- vendor css -->
-<link href="{{ url_for('static', filename='/lib/@fortawesome/fontawesome-free/css/all.min.css') }}" rel="stylesheet">
+<link href="{{ url_for('static', filename='/lib/fortawesome/fontawesome-free/css/all.min.css') }}" rel="stylesheet">
 
 <link href="{{ url_for('static', filename='/lib/ionicons/css/ionicons.min.css') }}" rel="stylesheet">
 
