--- a/app/templates/email/volunteer_claimed_confirmation.html
+++ b/app/templates/email/volunteer_claimed_confirmation.html
@@ -1,4 +1,4 @@
-<p>Dear {{ user.username }},</p>
+<p>Dear {{ user.name }},</p>
 <p>Thank you for volunteering to deliver groceries/essential items to {{ transaction.recipient.name }} on {{ date }}.</p>
 
 <p>The recipient may make changes to their order before Thursday evening. You will
