--- a/app/templates/email/recipient_modification_confirmation.html
+++ b/app/templates/email/recipient_modification_confirmation.html
@@ -1,4 +1,4 @@
-<p>Dear {{ user.username }},</p>
+<p>Dear {{ user.name }},</p>
 
 <p>We’ve received the change(s) you made to your order to be delivered on
 {{ date }}.</p>
