--- a/app/templates/user/deliveries.html
+++ b/app/templates/user/deliveries.html
@@ -1,45 +1,23 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-  {% if usertype == 'volunteer' %}
-    <div class='row' style='margin-bottom:30px'><h2>Deliveries by {{ user.username }}</h2></div>
-    <div class='flex-container'>
-      <div class='row'>
-        <div class='col-lg-12'>
-          <div style='margin-bottom:55px'>
-            <h3> Upcoming Deliveries </h3>
-            <br>
-            {{ user.get_transactions(completed=False) | safe }}
-          </div>
-          <div style='margin-bottom:40px'>
-            <h3> Completed Deliveries </h3>
-            <br>
-            {{ user.get_transactions(completed=True) | safe }}
-          </div>
-          <a class="btn btn-primary btn-lg" href="{{ url_for('delivery_signup') }}" role="button" style='font-size:20px'>Delivery Signup</a>
 
+  <div class='row' style='margin-bottom:30px'><h2>Deliveries: {{ user.username }}</h2></div>
+  <div class='flex-container'>
+    <div class='row'>
+      <div class='col-lg-12'>
+        <a class="btn btn-primary btn-lg" href="{{ url_for('delivery_signup') }}" role="button" style='font-size:20px'>Delivery Signup</a>
+        <div style='margin-bottom:55px; margin-top:55px'>
+          <h3> Upcoming Deliveries </h3>
+          <br>
+          {{ user.get_transactions(completed=False) | safe }}
+        </div>
+        <div style='margin-bottom:40px'>
+          <h3> Completed Deliveries </h3>
+          <br>
+          {{ user.get_transactions(completed=True) | safe }}
         </div>
       </div>
     </div>
-
-  {% elif usertype == 'recipient' %}
-    <div class='row' style='margin-bottom:30px'><h2>Deliveries for {{ user.username }}</h2></div>
-    <div class='flex-container'>
-      <div class='row'>
-        <div class='col-md-12'>
-          <div style='margin-bottom:55px'>
-            <h3> Upcoming Deliveries </h3>
-            <br>
-            {{ user.get_transactions(completed=False) | safe }}
-          </div>
-          <div style='margin-bottom:40px'>
-            <h3> Completed Deliveries </h3>
-            <br>
-            {{ user.get_transactions(completed=True) | safe }}
-          </div>
-          <a class="btn btn-primary btn-lg" href="{{ url_for('book') }}" role="button" style='font-size: 20px'>Book Delivery</a>
-        </div>
-      </div>
-    </div>
-  {% endif %}
+  </div>
 {% endblock %}
