Improved admin view + rearranged deliveries page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -96,4 +96,11 @@ $(document).ready( function () {
   "ordering": false});
 } );
 </script>
+
+<script type="text/javascript">
+    $('.confirmation').on('click', function () {
+        return confirm('Confirm selection.');
+    });
+</script>
+
 {% endblock %}
