Minor field rendering fixes

--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -12,6 +12,7 @@
     </p>
 
   {% if transaction.recipient.address_notes  %}
+  <p><h4>Address Notes</h4></p>
     <p>
     {{ transaction.recipient.address_notes }}
     </p>
