--- a/app/templates/email/volunteer_reminder.html
+++ b/app/templates/email/volunteer_reminder.html
@@ -24,9 +24,11 @@
 
 {{ transaction.payment_type }}
 
-<p><h4>Payment Notes:</h4></p>
+{% if transaction.payment_notes  %}
+  <p><h4>Payment Notes:</h4></p>
 
-{{ transaction.payment_notes }}
+  {{ transaction.payment_notes }}
+{% endif %}
 
 {% if transaction.notes  %}
   <p><h4>Other Notes:</h4></p>
