--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -27,15 +27,17 @@
             <h4> Phone </h4>
             {{ user.phone }} <br>
           </p>
-          {% if usertype== 'recipient'%}
+          {% if user.user_type == 'recipient'%}
             <p>
               <h4> Address </h4>
               {{ user.address }} <br>
             </p>
-            <p>
-              <h4> Address Notes </h4>
-              {{ user.address_notes }} <br>
-            </p>
+              {% if user.address_notes %}
+              <p>
+                <h4> Address Notes </h4>
+                {{ user.address_notes }} <br>
+              </p>
+              {% endif %}
           {% endif %}
 
       <p><a class="btn btn-primary btn-md" href="{{ url_for('edit_user_info', username=current_user.username) }}" role="button">Edit User Info</a></p>
