--- a/app/templates/invoice_form.html
+++ b/app/templates/invoice_form.html
@@ -8,7 +8,10 @@
 <br>
 
 {% if transaction.image_fname %}
-<img src="{{ url_for('static', filename='receipt_images/{transaction.image_fname}') }}" width="120" height="90" />
+<img src="{{ url_for('static', filename='receipt_images/{}'.format(transaction.image_fname)) }}" width="120" height="120" />
+<p>
+<a href="{{ url_for('delete_file', transaction_id=transaction.id) }}" style="font-size:10px">Delete Receipt</a></div>
+</p>
 {% endif %}
 
 
