--- a/app/templates/standard_form.html
+++ b/app/templates/standard_form.html
@@ -5,7 +5,7 @@
   <h2> {{ header }} </h2>
   <div class="row">
       <div class="col-md-4">
-          {{ wtf.quick_form(form) }}
+          {{ wtf.quick_form(form, button_map={'submit': 'primary'}) }}
       </div>
   </div>
   <br>
