Add url to volunteer email reminder, improved date validation

--- a/app/templates/email/volunteer_reminder.html
+++ b/app/templates/email/volunteer_reminder.html
@@ -47,6 +47,7 @@
 {% endfor %}
 </p>
 
+<p>To view this order on the online portal <a href="{{ url_for('view_list', transaction_id=transaction.id, _external=True) }}">click here</a></p>
 
 <p>Please call Natalie at 401-575-3142 if you have any questions or run into any issues.</p>
 
