hid upload image functionality

--- a/app/templates/invoice_form.html
+++ b/app/templates/invoice_form.html
@@ -4,6 +4,7 @@
 
 <p><h6><i>As a reminder, please venmo request @nataliet to get reimbursed</i></h6></p>
 <br>
+<!-- remove the upload functionality during retool
 <a href="{{ url_for('upload_file', transaction_id=transaction.id) }}" style="font-size:20px">Optional Receipt Upload</a></div>
 <br>
 
@@ -12,6 +13,7 @@
 <p>
 <a href="{{ url_for('delete_file', transaction_id=transaction.id) }}" style="font-size:10px">Delete Receipt</a></div>
 </p>
+-->
 {% endif %}
 
 
