Added phone + global password

--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -6,6 +6,10 @@
 
   <b>{{ transaction.recipient.name }}</b>
 
+  <p><h4>Recipient Phone</h4></p>
+
+  {{ transaction.recipient.phone }}
+
   <p><h4>Recipient Address</h4></p>
     <p>
     {{ transaction.recipient.address }}
