--- a/app/templates/email/volunteer_reminder.html
+++ b/app/templates/email/volunteer_reminder.html
@@ -47,9 +47,8 @@
 {% endfor %}
 </p>
 
-<p>To view this order on the online portal <a href="{{ url_for('view_list', transaction_id=transaction.id, _external=True) }}">click here</a></p>
+<p>To view this order on the online portal <a href="{{ url_for('view_list', transaction_id=transaction.id, _external=True) }}">click here</a>.</p>
 
-<p>Please call Natalie at 401-575-3142 if you have any questions or run into any issues.</p>
 
 <p>Thank you,</p>
 <p>The “Hanover Helpers” team</p>
