Change empty table message

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -101,7 +101,7 @@ $(document).ready( function () {
   $('table.display').DataTable({
   "ordering": false,
   "oLanguage": {
-        "sEmptyTable": "There are no deliveries to be claimed right now - check back later!"
+        "sEmptyTable": "Empty"
     }
   });
 
