--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -22,6 +22,13 @@
     </p>
   {% endif %}
 
+  {% if transaction.payment_type  %}
+  <p><h4>Payment Type</h4></p>
+    <p>
+    {{ transaction.payment_type }}
+    </p>
+  {% endif %}
+
   {% if transaction.payment_notes  %}
   <p><h4>Payment Notes</h4></p>
     <p>
