--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -6,5 +6,6 @@
 {% endblock %}
 
 {% block body %}
-<img src="{{ url_for('static', filename='natalie.jpg' )}}" alt="Queen of HH">
+<h4> Congratulations Natalie & Warren!!! </h4>
+<img src="{{ url_for('static', filename='nat_wedding.jpg' )}}" alt="congrats">
 {% endblock %}
